{
    "name": "CustomInput",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "dd9f12c6-ec7a-4be4-bed6-68d023fa2c93",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f6d3f1ff-8693-4027-bcd0-c2ae796fae6a",
                    "expectedControlType": "Pose",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a1df362-5448-4455-9ade-6e189f12ff29",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}